# eth-dashboard

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  Caddyfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .venv  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_derivatives_snapshots.py  0003_order_flow.py  0004_smart_money_leaderboard.py  0005_pending_transfers.py  0006_volume_buckets.py  0007_wallet_clusters.py  0008_wallet_balance_history.py  0009_staking_flows.py  0010_lst_supply.py  0011_protocol_tvl.py  0012_protocol_tvl_widen_asset.py  0013_dex_pool_tvl.py  0014_realtime_volume.py  0015_staking_flows_by_entity.py  0016_bridge_flows.py  0017_lrt_tvl.py  0018_lst_supply_eth.py  0019_staking_yield.py  0020_order_flow_per_dex.py  0021_perp_liquidation.py  0022_address_label.py  0023_transfers_flow_kind.py  0024_wallet_perf_scoring.py  0025_onchain_perp_event.py  0026_mantle_order_flow.py  0027_stable_supply.py  0028_perp_copy_trading.py
backend/app/: main.py
backend/app/core/: db.py  (+7 more)
backend/dune/: bridge_flows.sql  exchange_flows.sql  onchain_volume.sql  order_flow.sql  smart_money_leaderboard.sql  stablecoin_supply.sql  staking_flows.sql  staking_flows_by_entity.sql  volume_buckets.sql
backend/scripts/: bybit_diagnostic.py  bybit_ticker_diagnostic.py
backend/tests/: conftest.py  test_alert_delivery.py  test_alert_rules.py  test_alerts_api.py  test_auth.py  test_auth_core.py  test_auth_router.py  test_beacon_client.py  test_binance_client.py  test_bybit_liquidation_parser.py  test_cex_deposit.py  test_cluster_engine.py  test_cluster_purge.py  test_clusters_api.py  test_config.py  test_copy_trading_api.py  test_db_schema.py  test_defi_jobs.py  test_defi_tvl_sync.py  test_defillama_client.py  test_derivatives_api.py  test_derivatives_clients.py  test_dex_pool_jobs.py  test_dex_pool_sync.py  test_dune_client.py  test_erc20_decode.py  test_etherscan_client.py  test_flow_classifier.py  test_flow_sync.py  test_flows_api.py  test_gas_funder.py  test_gmx_v2_decoder.py  test_health.py  test_leaderboard_api.py  test_leaderboard_sync.py  test_lst_jobs.py  test_lst_sync.py  test_mantle_dex_registry.py  test_mantle_flows_api.py  test_mantle_order_flow_agg.py  (+24 more)
(+278 files in other folders)
