[project]
name = "etherscope-backend"
version = "0.1.0"
description = "Etherscope — Ethereum analytics dashboard backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "arq>=0.26",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "websockets>=13.1",
    "argon2-cffi>=23.1",
    # eth-abi (pure-Python) is pulled in for the v5 GMX V2 perp decoder —
    # the GMX EventLogData struct is too deeply nested (7 nested arrays of
    # (string, T) plus 7 of (string, T[])) to hand-roll safely. Existing
    # decoders (swap_decoder, parser) keep their hand-rolled hex parsing.
    "eth-abi>=5.1",
    # eth-hash needs a backend installed for keccak256; pycryptodome is the
    # standard pure-wheel choice (no native build at install time).
    "eth-hash[pycryptodome]>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres,redis]>=4.8",
    "ruff>=0.8",
    "httpx>=0.28",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
